--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,18 +34,27 @@
 
   <body>
    <header class="site-header sticky-top py-1">
-  <nav class="container d-flex flex-column flex-md-row justify-content-between">
+  <div class="container">
+  <div class="logot">
     <a class="py-2 d-none d-md-inline-block" <%= link_to
     home_path %> aria-label="Product">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Главная страница</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
     </a>
+    <%= link_to "EvgBlog", home_path, id: "logo" %>
+    </div>
+    <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <span class="py-2 d-none d-md-inline-block" ><%= link_to "Главная страница",
     home_path %></span>
     <span class="py-2 d-none d-md-inline-block" ><%= link_to "Про нас",
     about_path %></span>
     <span class="py-2 d-none d-md-inline-block" ><%= link_to 'Добавление статьи',
     new_post_path %></span>
+    <span class="py-2 d-none d-md-inline-block" ><%= link_to 'Log in',
+    new_post_path %></span>
+    <span class="py-2 d-none d-md-inline-block" ><%= link_to 'Sign up',
+    new_post_path %></span>
   </nav>
+  </div>
 
 </header>
   <div class = "container">
