--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,9 @@
 </header>
 
   <div class = "container">
+  <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
    <%= yield %>
    <footer class="footer">
   <small>
@@ -72,5 +75,6 @@
   </nav>
 </footer>
   </div>
+  <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
