--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, "Edit user") %>
+<h1>Редактировать свой профиль</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -15,10 +15,15 @@
       <%= f.label :Пароль %>
       <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Подтвердите пароль" %>
+      <%= f.label :password_confirmation, "Подтвердить пароль" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Создать аккаунт", class: "btn btn-primary" %>
+      <%= f.submit "Сохранить изменения", class: "btn btn-primary" %>
     <% end %>
+
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" target="_blank">Изменить аватарку</a>
+    </div>
   </div>
 </div>
